--- a/ems-frontend/src/App.css
+++ b/ems-frontend/src/App.css
@@ -1,7 +1,6 @@
 .footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    /* margin-bottom: 0px; */
     width: 100%;
     height: 50px;
     background-color: black;
